--- a/css/i-label.css
+++ b/css/i-label.css
@@ -29,7 +29,8 @@ i-label:not(.itag-rendered) {
 i-label {
     margin: 0.5em 0 0.2em;
     display: inline-block;
-    *display: inline; /*IE 6/7*/
-    zoom: 1;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
